Update template accueil dashboard
Ajout des principaux éléments graphiques de la page d'accueil du dashboard

--- a/src/dashboard/templates/dashboard_accueil.html
+++ b/src/dashboard/templates/dashboard_accueil.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Accueil dashboard</title>
-    </head>
-    <body>
-        <h1>Page d'accueil du dashboard</h1>
-    </body>
-</html>
+<h2>Projet : O2.projet Oho</h2>
+
+<!-- Lien vers la page 'Historique' -->
+<a href="">Historique</a>
+<!-- Lien vers la page 'Graphique' -->
+<a href="">Graphique</a>
+<!-- Bouton qui va lancer le SCRAP du projet affiché -->
+<button>Relevé</button>
+<!-- Lien vers la page 'Détails des derniers relevés' -->
+<a href="">Détails derniers relevés</a>
