--- a/src/dashboard/templates/dashboard_accueil.html
+++ b/src/dashboard/templates/dashboard_accueil.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <h2>Projet : O2.projet Oho</h2>
 
 <!-- Lien vers la page 'Historique' -->
@@ -8,3 +11,4 @@
 <button>Relevé</button>
 <!-- Lien vers la page 'Détails des derniers relevés' -->
 <a href="">Détails derniers relevés</a>
+{% endblock %}
