add lien vers dashboard O2

--- a/src/home/templates/home/private.html
+++ b/src/home/templates/home/private.html
@@ -13,7 +13,7 @@
     <tbody>
       <tr>
             <th scope="row">1</th>
-            <th scope="col"><a href="">O2</a></th>
+            <th scope="col"><a href="../dashboard/">O2</a></th>
             <th scope="col">25/08</th>
             <td>40</td>
         </tr>
