add btn retour home depuis accueil dashboard

--- a/src/dashboard/templates/dashboard_accueil.html
+++ b/src/dashboard/templates/dashboard_accueil.html
@@ -11,4 +11,8 @@
 <button>Relevé</button>
 <!-- Lien vers la page 'Détails des derniers relevés' -->
 <a href="">Détails derniers relevés</a>
+<!-- Bouton de retour vers la page d'accueil privée -->
+<button>
+    <a href="../home">Retour</a>
+</button>
 {% endblock %}
