--- a/src/dashboard/templates/dashboard_accueil.html
+++ b/src/dashboard/templates/dashboard_accueil.html
@@ -5,6 +5,6 @@
 <!-- Lien vers la page 'Graphique' -->
 <a href="">Graphique</a>
 <!-- Bouton qui va lancer le SCRAP du projet affiché -->
-<button>Relevé</button>
+<a href="releve/">Relevé</a>
 <!-- Lien vers la page 'Détails des derniers relevés' -->
 <a href="">Détails derniers relevés</a>
