--- a/src/dashboard/templates/dashboard_accueil.html
+++ b/src/dashboard/templates/dashboard_accueil.html
@@ -59,6 +59,6 @@
 
 <!-- Bouton de retour vers la page d'accueil privée -->
 <!-- <button> -->
-<a type="button" class="btn btn-warning" href="../home">Retour</a>
+<a type="button" class="btn btn-warning" href="../">Retour</a>
 <!-- </button> -->
 {% endblock %}
