feature : accueil dashboard
. Titre page accueil dashboard dynamique

--- a/src/dashboard/templates/dashboard_accueil.html
+++ b/src/dashboard/templates/dashboard_accueil.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Projet : O2</h2>
+<h2>Projet : {{ projet.initial }}</h2>
 
 <!-- Lien vers la page 'Historique' -->
 <!-- <a href="">Historique</a> -->
