--- a/src/dashboard/templates/dashboard_accueil.html
+++ b/src/dashboard/templates/dashboard_accueil.html
@@ -21,7 +21,7 @@
 <div class="card" style="width: 18rem;">
     <div class="card-body">
         <h5 class="card-title">
-            <a href="">Graphique</a>
+            <a href="graph/">Graphique</a>
         </h5>
         <p class="card-text">
             <i class="bi-bar-chart" style="font-size: 2rem; color: cornflowerblue;"></i>
