--- a/src/dashboard/templates/dashboard_accueil.html
+++ b/src/dashboard/templates/dashboard_accueil.html
@@ -37,6 +37,7 @@
             <button type="button" class="btn btn-primary">
                 <a href="releve/">Relevé</a>
             </button>
+            <p id="statut">Statut :{{ statut }}</p>
         </h5>
         <p class="card-text">
             <i class="bi bi-arrow-down-circle" style="font-size: 2rem; color: cornflowerblue;"></i>
