fix nom colonnes tableaux
. tableau accueil publique
. tableau acceuil privé

--- a/src/home/templates/home/public.html
+++ b/src/home/templates/home/public.html
@@ -7,8 +7,8 @@
   <thead>
     <tr>
       <th scope="col">Projet</th>
-      <th scope="col">Date</th>
-      <th scope="col">Etat</th>
+      <th scope="col">Date du relevé</th>
+      <th scope="col">Etat du relevé</th>
     </tr>
   </thead>
   <tbody>
