--- a/src/home/templates/home/private.html
+++ b/src/home/templates/home/private.html
@@ -7,8 +7,8 @@
     <thead>
       <tr>
         <th scope="col">Projet</th>
-        <th scope="col">Date</th>
-        <th scope="col">Nombre</th>
+        <th scope="col">Date du dernier relevé</th>
+        <th scope="col">Nombre total de relevés</th>
       </tr>
     </thead>
     <tbody>
