--- a/src/home/templates/home/private.html
+++ b/src/home/templates/home/private.html
@@ -3,30 +3,32 @@
 {% load i18n %}
 
 {% block content %}
-<table class="table">
+<div class="py-2">
+  <table class="table">
     <thead>
-      <tr>
+      <tr class="text-center align-middle fs-5">
         <th scope="col">Projet</th>
         <th scope="col">Date du dernier relevé</th>
         <th scope="col">Etat du dernier relevé</th>
         <th scope="col">Nombre total de relevés</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody class="table-group-divider">
       {% for projet in projets %}
-        <tr>
+        <tr class="text-center align-middle">
           <th scope="col"><a href="dashboard/{{projet.projetId_id}}">{{projet.projetId}}</a></th>
           {% language 'fr' %}
           <th scope="col">{{projet.dateRel | date:"d F Y"}}</th>
           {% endlanguage %}
           {% if projet.status %}
-          <td><i class="bi bi-check-lg"></i></td>
+          <td><i class="bi bi-check-lg text-success" style="font-size: 25px; font-weight: bold;"></i></td>
           {% else %}
-            <td><i class="bi bi-exclamation-triangle"></i></td>
+            <td><i class="bi bi-exclamation-triangle text-danger" style="font-size: 25px; font-weight: bold;"></i></td>
           {% endif %}
           <th scope="col">{{projet.nbThreadsRel}}</th>
         </tr>
       {% endfor %}
     </tbody>
   </table>
+</div>
 {% endblock %}
