--- a/src/home/templates/base.html
+++ b/src/home/templates/base.html
@@ -15,9 +15,9 @@
             <a class="navbar-brand">Telephonica</a>
             <form class="d-flex">
                 {% if user.is_authenticated %}
-                    <button class="btn btn-light ms-3"><a href="{% url 'logout' %}">Déconnexion</a></button>
+                    <a class="btn btn-danger" href="{% url 'logout' %}">Déconnexion</a>
                 {% else %}
-                    <button class="btn btn-light ms-3"><a href="../account/login">Connexion</a></button>
+                    <a class="btn btn-success" href="../account/login">Connexion</a>
                 {% endif %}
             </form>
         </div>
