--- a/src/dashboard/templates/dashboard/accueil.html
+++ b/src/dashboard/templates/dashboard/accueil.html
@@ -13,7 +13,7 @@
     <div class="row">
         <!-- Historique -->
         <div class="col-md-6 col-sm-12 my-2">
-            <a href="" class="text-decoration-none">
+            <a href="./historique/{{projet.codePr}}" class="text-decoration-none">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
