--- a/src/dashboard/templates/dashboard/accueil.html
+++ b/src/dashboard/templates/dashboard/accueil.html
@@ -28,7 +28,7 @@
         </div>
         <!-- Graphique -->
         <div class="col-md-6 col-sm-12 my-2">
-            <a href="" class="text-decoration-none">
+            <a href="./graph/{{projet.codePr}}" class="text-decoration-none">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
