--- a/src/dashboard/templates/dashboard/pageGraph.html
+++ b/src/dashboard/templates/dashboard/pageGraph.html
@@ -137,7 +137,11 @@
         } 
 }); 
 </script>
-
+<div class="row text-end">
+  <div class="col">
+      <a type="button" class="btn btn-warning" href="../{{idProjet}}">Retour</a>
+  </div>
+</div>
 </body>
 </html>
 
