bug httepresponseredirect à corriger

--- a/src/dashboard/templates/dashboard/accueil.html
+++ b/src/dashboard/templates/dashboard/accueil.html
@@ -43,7 +43,7 @@
         </div>
         <!-- Relevé -->
         <div class="col-md-6 col-sm-12 my-2">
-            <a href="releve/" class="text-decoration-none">
+            <a href="releve/{{projet.codePr}}" class="text-decoration-none">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
