--- a/src/dashboard/templates/dashboard/pageGraph.html
+++ b/src/dashboard/templates/dashboard/pageGraph.html
@@ -115,7 +115,7 @@
               },
               beginAtZero:true,
               position:'right',
-              suggestedMax:Math.max(...datay2)+5,
+              suggestedMax:Math.max(...{{nbRel}})+5,
               grid:{
                 display:false,
               }
