Statut du scraping ajouté et fonctionel mais pas beau

--- a/src/dashboard/templates/dashboard/accueil.html
+++ b/src/dashboard/templates/dashboard/accueil.html
@@ -72,6 +72,7 @@
             </a>
         </div>
     </div>
+    <p>Statut du relevé : {{statut}}</p>
     <div class="row text-end">
         <div class="col">
             <a type="button" class="btn btn-warning" href="../">Retour</a>
