--- a/src/home/templates/base.html
+++ b/src/home/templates/base.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand">Telephonica</a>
+            <a class="navbar-brand">Telefónica</a>
             <form class="d-flex">
                 {% if user.is_authenticated %}
                     <a class="btn btn-danger" href="{% url 'logout' %}">Déconnexion</a>
