annulation du script en phase 0.00001 => bug cassepied tjrs présent explication ligne 397

--- a/src/dashboard/templates/dashboard/accueil.html
+++ b/src/dashboard/templates/dashboard/accueil.html
@@ -69,7 +69,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            Relevé
+                            Annuler le relevé
                         </h5>
                         <p class="card-text">
                             <i class="bi bi-arrow-down-circle" style="font-size: 2rem;"></i>
