--- a/src/dashboard/templates/dashboard/accueil.html
+++ b/src/dashboard/templates/dashboard/accueil.html
@@ -65,7 +65,7 @@
         {% else %}
 
         <div class="col-md-6 col-sm-12 my-2">
-            <a class="text-decoration-none">
+            <a href="annulation/" class="text-decoration-none">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
