affichage du dernier comm dans page détails sans actualisation auto

--- a/src/dashboard/templates/dashboard/accueil.html
+++ b/src/dashboard/templates/dashboard/accueil.html
@@ -82,7 +82,7 @@
         {% endif %}
         <!-- Détails derniers relevés -->
         <div class="col-md-6 col-sm-12 my-2">
-            <a href="" class="text-decoration-none">
+            <a href="details/" class="text-decoration-none">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
