--- a/src/dashboard/templates/dashboard/accueil.html
+++ b/src/dashboard/templates/dashboard/accueil.html
@@ -53,7 +53,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            Relevé
+                            Lancer le relevé
                         </h5>
                         <p class="card-text">
                             <i class="bi bi-arrow-down-circle" style="font-size: 2rem;"></i>
@@ -96,7 +96,7 @@
             </a>
         </div>
     </div>
-    <p>Statut du relevé : {{statut}}</p>
+    <p class="fs-3">Statut du relevé : {{statut}}</p>
     
     {% if statut == "En cours" %}
     <div class="spinner-border" role="status">
